--- a/.gitattributes
+++ b/.gitattributes
@@ -41,3 +41,14 @@ gwtc-1_analysis_results/bilby_results/GW170104_bilby_result.json filter=lfs diff
 gwtc-1_analysis_results/bilby_results/GW170608_bilby_result.json filter=lfs diff=lfs merge=lfs -text
 gwtc-1_analysis_results/bilby_results/GW170809_bilby_result.json filter=lfs diff=lfs merge=lfs -text
 gwtc-1_analysis_results/bilby_results/GW170818_bilby_result.json filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/pp_plots/all_parameters_pp_plot_prior_file_high_masss.pdf filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/pp_plots/all_parameters_pp_plot_ROQ_prior_file_128s.pdf filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/pp_plots/all_parameters_pp_plot_prior_file_16s.pdf filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/pp_plots/all_parameters_pp_plot_prior_file_4s.pdf filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/pp_plots/all_parameters_pp_plot_prior_file_8s.pdf filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/fiducial_runs/bnsradec.png filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/fiducial_runs/table.png filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/fiducial_runs/bbh_corner_extrinsic.png filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/fiducial_runs/bbh_corner_intrinsic.png filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/fiducial_runs/bns_extrinsic.png filter=lfs diff=lfs merge=lfs -text
+verification/review_test_results/fiducial_runs/bns_intinsic.png filter=lfs diff=lfs merge=lfs -text
