updating ini files

--- a/gwtc-1_analysis_settings/GW170608.ini
+++ b/gwtc-1_analysis_settings/GW170608.ini
@@ -16,6 +16,7 @@ ignore-gwpy-data-quality-check=True
 gps-tuple=None
 gps-file=None
 timeslide-file=None
+timeslide-dict=None
 trigger-time=1180922494.5  # Trigger time
 gaussian-noise=False
 n-simulation=0
@@ -43,6 +44,7 @@ maximum-frequency=1024
 minimum-frequency={H1:30, L1:20}
 zero-noise=False
 tukey-roll-off=0.4
+resampling-method=lal
 
 ################################################################################
 ## Injection arguments
@@ -51,7 +53,7 @@ tukey-roll-off=0.4
 injection=False
 injection-dict=None
 injection-file=None
-injection-numbers=None
+injection-numbers=[None]
 injection-waveform-approximant=None
 
 ################################################################################
@@ -63,11 +65,11 @@ label=GW170608
 local=False
 local-generation=False
 local-plot=False
-outdir=bilby_output_lal_downsampling_no_tmarg_det_frame
+outdir=/home/isobel.romero-shaw/bilby-gwtc-1-analysis-and-verification/gwtc-1_analysis_settings/runs/GW170608/bilby_output_v1.0.0_tmarg
 periodic-restart-time=6000
 request-memory=4.0
 request-memory-generation=None
-request-cpus=16
+request-cpus=4
 singularity-image=None
 scheduler=condor
 scheduler-args=None
@@ -86,11 +88,13 @@ osg=False
 distance-marginalization=True
 distance-marginalization-lookup-table=None
 phase-marginalization=True
-time-marginalization=False
+time-marginalization=True
 jitter-time=True
+reference-frame=H1L1
+time-reference=H1
 likelihood-type=ROQGravitationalWaveTransient
 roq-folder=/home/cbc/ROQ_data/IMRPhenomPv2/16s
-roq-scale-factor=1
+roq-scale-factor=1.0
 extra-likelihood-kwargs=None
 
 ################################################################################
@@ -126,6 +130,8 @@ convert-to-flat-in-component-mass=False
 
 postprocessing-executable=None
 postprocessing-arguments=None
+single-postprocessing-executable=None
+single-postprocessing-arguments=None
 
 ################################################################################
 ## Sampler arguments
@@ -134,7 +140,7 @@ postprocessing-arguments=None
 sampler=dynesty
 sampling-seed=None
 n-parallel=5
-sampler-kwargs={queue_size=4, nlive: 2000, sample: rwalk, walks=100, n_check_point=2000, nact=10}
+sampler-kwargs={'queue_size': 4, 'nlive': 2000, 'sample': 'rwalk', 'walks': 100, 'n_check_point': 2000, 'nact': 10, 'npool': 4}
 
 ################################################################################
 ## Waveform arguments
@@ -148,8 +154,6 @@ pn-spin-order=-1
 pn-tidal-order=-1
 pn-phase-order=-1
 pn-amplitude-order=0
+mode-array=None
 frequency-domain-source-model=lal_binary_black_hole
 
-request-cpus = 4
-reference-frame=H1L1
-time-reference=H1
