--- a/gwtc-1_analysis_settings/GW170818.ini
+++ b/gwtc-1_analysis_settings/GW170818.ini
@@ -1,40 +1,159 @@
-trigger-time = 1187058327.1
-detectors = [H1, L1, V1]
-channel-dict = {H1:DCH-CLEAN_STRAIN_C02, L1:DCH-CLEAN_STRAIN_C02, V1:Hrec_hoft_V1O2Repro2A_16384Hz}
-prior_file = 4s
-time-marginalization=False
-distance-marginalization=True
-phase-marginalization=True
-create-plots=True
-local-generation = True
-psd-dict = {H1:./GW170818_LIGO_Hanford_PSD1Hz_psd.txt, L1:./GW170818_LIGO_Livingston_PSD1Hz_psd.txt, V1:./GW170818_Virgo_PSD1Hz_psd.txt}
-
-label = GW170818
-outdir = bilby_output_lal_downsampling_no_tmarg_det_frame
-accounting = ligo.dev.o3.cbc.pe.lalinference
-
-duration = 4
-psd-start-time = 0
-psd-length = 1
-coherence-test = False
-
-maximum-frequency=1024
-minimum-frequency=16
-sampling-frequency=2048
-reference-frequency = 20
-waveform-approximant = IMRPhenomPV2
-frequency-domain-source-model = lal_binary_black_hole
+################################################################################
+## Calibration arguments
+################################################################################
 
 calibration-model=CubicSpline
-spline-calibration-envelope-dict = {H1:./GWTC1_GW170818_H_CalEnv.txt, L1:./GWTC1_GW170818_L_CalEnv.txt, V1:./GWTC1_GW170818_V_CalEnv.txt}
-spline_calibration-nodes = 10
+spline-calibration-envelope-dict={H1:./GWTC1_GW170818_H_CalEnv.txt, L1:./GWTC1_GW170818_L_CalEnv.txt, V1:./GWTC1_GW170818_V_CalEnv.txt}
+spline-calibration-nodes=10
+spline-calibration-amplitude-uncertainty-dict=None
+spline-calibration-phase-uncertainty-dict=None
 
-deltaT = 0.2
-sampler = dynesty
-sampler-kwargs = {queue_size=4, nlive: 2000, sample: rwalk, walks=100, n_check_point=2000, nact=10}
-n-parallel = 5
+################################################################################
+## Data generation arguments
+################################################################################
 
-transfer-files = False
-request-cpus = 4
+ignore-gwpy-data-quality-check=True
+gps-tuple=None
+gps-file=None
+timeslide-file=None
+timeslide-dict=None
+trigger-time=1187058327.1
+gaussian-noise=False
+n-simulation=0
+data-dict=None
+data-format=None
+channel-dict={H1:DCH-CLEAN_STRAIN_C02, L1:DCH-CLEAN_STRAIN_C02, V1:Hrec_hoft_V1O2Repro2A_16384Hz}
+
+################################################################################
+## Detector arguments
+################################################################################
+
+coherence-test=False
+detectors=[H1, L1, V1]
+duration=4.0
+generation-seed=None
+psd-dict={H1:./GW170818_LIGO_Hanford_PSD1Hz_psd.txt, L1:./GW170818_LIGO_Livingston_PSD1Hz_psd.txt, V1:./GW170818_Virgo_PSD1Hz_psd.txt}
+psd-fractional-overlap=0.5
+post-trigger-duration=2.0
+sampling-frequency=2048.0
+psd-length=1
+psd-maximum-duration=1024
+psd-method=median
+psd-start-time=0.0
+maximum-frequency=1024
+minimum-frequency=16
+zero-noise=False
+tukey-roll-off=0.4
+resampling-method=lal
+
+################################################################################
+## Injection arguments
+################################################################################
+
+injection=False
+injection-dict=None
+injection-file=None
+injection-numbers=None
+injection-waveform-approximant=None
+
+################################################################################
+## Job submission arguments
+################################################################################
+
+accounting=ligo.dev.o3.cbc.pe.lalinference
+label=GW170818
+local=False
+local-generation=True
+local-plot=False
+outdir=/home/isobel.romero-shaw/bilby-gwtc-1-analysis-and-verification/gwtc-1_analysis_settings/runs/GW170818/bilby_output_v1.0.0_tmarg
+periodic-restart-time=28800
+request-memory=4.0
+request-memory-generation=None
+request-cpus=4
+singularity-image=None
+scheduler=condor
+scheduler-args=None
+scheduler-module=None
+scheduler-env=None
+submit=True
+transfer-files=False
+log-directory=None
+online-pe=False
+osg=False
+
+################################################################################
+## Likelihood arguments
+################################################################################
+
+distance-marginalization=True
+distance-marginalization-lookup-table=None
+phase-marginalization=True
+time-marginalization=True
+jitter-time=True
 reference-frame=H1L1
 time-reference=H1
+likelihood-type=GravitationalWaveTransient
+roq-folder=None
+roq-scale-factor=1
+extra-likelihood-kwargs=None
+
+################################################################################
+## Output arguments
+################################################################################
+
+create-plots=True
+plot-calibration=False
+plot-corner=False
+plot-marginal=False
+plot-skymap=False
+plot-waveform=False
+plot-format=png
+create-summary=False
+email=None
+existing-dir=None
+webdir=None
+summarypages-arguments=None
+
+################################################################################
+## Prior arguments
+################################################################################
+
+default-prior=BBHPriorDict
+deltaT=0.2
+prior-file=4s
+prior-dict=None
+convert-to-flat-in-component-mass=False
+
+################################################################################
+## Post processing arguments
+################################################################################
+
+postprocessing-executable=None
+postprocessing-arguments=None
+single-postprocessing-executable=None
+single-postprocessing-arguments=None
+
+################################################################################
+## Sampler arguments
+################################################################################
+
+sampler=dynesty
+sampling-seed=None
+n-parallel=5
+sampler-kwargs={'queue_size': 4, 'nlive': 2000, 'sample': 'rwalk', 'walks': 100, 'n_check_point': 2000, 'nact': 10, 'npool': 4}
+
+################################################################################
+## Waveform arguments
+################################################################################
+
+waveform-generator=bilby.gw.waveform_generator.WaveformGenerator
+reference-frequency=20.0
+waveform-approximant=IMRPhenomPV2
+catch-waveform-errors=False
+pn-spin-order=-1
+pn-tidal-order=-1
+pn-phase-order=-1
+pn-amplitude-order=0
+mode-array=None
+frequency-domain-source-model=lal_binary_black_hole
+
