updating GW170817 ini file

--- a/gwtc-1_analysis_settings/GW170817.ini
+++ b/gwtc-1_analysis_settings/GW170817.ini
@@ -1,5 +1,5 @@
 label = GW170817_IMRPhenomPv2_NRTidal_lowspin
-outdir = outdir_lowspin_nocal_rerun
+outdir = outdir
 
 trigger_time = 1187008882.43
 duration = 128
@@ -10,40 +10,30 @@ prior-file = lowspin.prior
 
 detectors = [H1, L1, V1]
 psd_dict = {H1=../raw_data/h1_psd.txt, L1=../raw_data/l1_psd.txt, V1=../raw_data/v1_psd.txt}
-channel_dict = {H1:LOSC-STRAIN, L1:LOSC-STRAIN, V1=LOSC-STRAIN}
-data_dict = {H1=../raw_data/H-H1_LOSC_CLN_16_V1-1187007040-2048.gwf, L1=../raw_data/L-L1_LOSC_CLN_16_V1-1187007040-2048.gwf, V1=../raw_data/V-V1_LOSC_CLN_16_V1-1187007040-2048.gwf}
+data-dict = {H1:../raw_data/H1.gwf, L1:../raw_data/L1.gwf, V1:../raw_data/V1.gwf}
+channel_dict = {H1:DCH-CLEAN_STRAIN_C02, L1:DCH-CLEAN_STRAIN_C02_T1700406_v3, V1:Hrec_hoft_V1O2Repro2A_16384Hz}
 
-time-marginalization = True
+time-marginalization = False
 distance-marginalization = True
 phase-marginalization = True
 
-minimum-frequency = 20
+minimum-frequency = 23
 maximum-frequency = 2048
 sampling-frequency = 4096
 
 frequency-domain-source-model = lal_binary_neutron_star
 
-#calibration-model = CubicSpline
-#spline-calibration-envelope-dict = {H1:../raw_data/GWTC1_GW170817_H_CalEnv.txt, L1: ../raw_data/GWTC1_GW170817_L_CalEnv.txt, V1: ../raw_data/GWTC1_GW170817_V_CalEnv.txt}
-#spline-calibration-nodes = 10
+calibration-model = CubicSpline
+spline-calibration-envelope-dict = {H1:../raw_data/GWTC1_GW170817_H_CalEnv.txt, L1: ../raw_data/GWTC1_GW170817_L_CalEnv.txt, V1: ../raw_data/GWTC1_GW170817_V_CalEnv.txt}
+spline-calibration-nodes = 10
 
-nlive = 1500
+nlive = 2000
 walks = 100
 maxmcmc = 5000
 nact = 5
-n-check-point = 50000
 
-facc = 0.5
-min-eff = 10
-
-nodes 35
-ntasks-per-node = 12
+nodes = 15
+ntasks-per-node = 14
 time = 24:00:00
 n-parallel = 1
-extra-lines = source /fred/oz117/gashton/miniconda3/bin/activate; conda activate mpi-bilby
-do-not-save-bounds-in-resume = True
-
-
-
-reference-frame=sky
-time-reference=geocent
+extra-lines = source /home/gashton/.bashrc; conda activate pbilby
