--- a/gwtc-1_analysis_settings/GW170817.ini
+++ b/gwtc-1_analysis_settings/GW170817.ini
@@ -1,5 +1,5 @@
 label = GW170817_IMRPhenomPv2_NRTidal_lowspin
-outdir = outdir
+outdir = GW170817_bilby_output
 
 trigger_time = 1187008882.43
 duration = 128
@@ -9,9 +9,9 @@ waveform_approximant = IMRPhenomPv2_NRTidal
 prior-file = lowspin.prior
 
 detectors = [H1, L1, V1]
-psd_dict = {H1=../raw_data/h1_psd.txt, L1=../raw_data/l1_psd.txt, V1=../raw_data/v1_psd.txt}
+psd-dict = {H1:./GWTC1_PSDs/GW170817_LIGO_Hanford_PSD1Hz_psd.txt, L1:./GWTC1_PSDs/GW170817_LIGO_Livingston_PSD1Hz_psd.txt, V1:./GWTC1_PSDs/GW170817_Virgo_PSD1Hz_psd.txt}
 data-dict = {H1:../raw_data/H1.gwf, L1:../raw_data/L1.gwf, V1:../raw_data/V1.gwf}
-channel_dict = {H1:DCH-CLEAN_STRAIN_C02, L1:DCH-CLEAN_STRAIN_C02_T1700406_v3, V1:Hrec_hoft_V1O2Repro2A_16384Hz}
+channel-dict = {H1:DCH-CLEAN_STRAIN_C02, L1:DCH-CLEAN_STRAIN_C02_T1700406_v3, V1:Hrec_hoft_V1O2Repro2A_16384Hz}
 
 time-marginalization = False
 distance-marginalization = True
@@ -24,7 +24,7 @@ sampling-frequency = 4096
 frequency-domain-source-model = lal_binary_neutron_star
 
 calibration-model = CubicSpline
-spline-calibration-envelope-dict = {H1:../raw_data/GWTC1_GW170817_H_CalEnv.txt, L1: ../raw_data/GWTC1_GW170817_L_CalEnv.txt, V1: ../raw_data/GWTC1_GW170817_V_CalEnv.txt}
+spline-calibration-envelope-dict = {H1:./GWTC1_CalEnv/GWTC1_GW170817_H_CalEnv.txt, L1:./GWTC1_CalEnv/GWTC1_GW170817_L_CalEnv.txt, V1:./GWTC1_CalEnv/GWTC1_GW170817_V_CalEnv.txt}
 spline-calibration-nodes = 10
 
 nlive = 2000
