--- a/gwtc-1_analysis_settings/GW170818.ini
+++ b/gwtc-1_analysis_settings/GW170818.ini
@@ -3,7 +3,7 @@
 ################################################################################
 
 calibration-model=CubicSpline
-spline-calibration-envelope-dict={H1:./GWTC1_GW170818_H_CalEnv.txt, L1:./GWTC1_GW170818_L_CalEnv.txt, V1:./GWTC1_GW170818_V_CalEnv.txt}
+spline-calibration-envelope-dict={H1:././GWTC1_CalEnv/GWTC1_GW170818_H_CalEnv.txt, L1:././GWTC1_CalEnv/GWTC1_GW170818_L_CalEnv.txt, V1:././GWTC1_CalEnv/GWTC1_GW170818_V_CalEnv.txt}
 spline-calibration-nodes=10
 spline-calibration-amplitude-uncertainty-dict=None
 spline-calibration-phase-uncertainty-dict=None
@@ -32,7 +32,7 @@ coherence-test=False
 detectors=[H1, L1, V1]
 duration=4.0
 generation-seed=None
-psd-dict={H1:./GW170818_LIGO_Hanford_PSD1Hz_psd.txt, L1:./GW170818_LIGO_Livingston_PSD1Hz_psd.txt, V1:./GW170818_Virgo_PSD1Hz_psd.txt}
+psd-dict={H1:./GWTC1_PSDs/GW170818_LIGO_Hanford_PSD1Hz_psd.txt, L1:./GWTC1_PSDs/GW170818_LIGO_Livingston_PSD1Hz_psd.txt, V1:./GWTC1_PSDs/GW170818_Virgo_PSD1Hz_psd.txt}
 psd-fractional-overlap=0.5
 post-trigger-duration=2.0
 sampling-frequency=2048.0
@@ -65,7 +65,7 @@ label=GW170818
 local=False
 local-generation=True
 local-plot=False
-outdir=/home/isobel.romero-shaw/bilby-gwtc-1-analysis-and-verification/gwtc-1_analysis_settings/runs/GW170818/bilby_output_v1.0.0_tmarg
+outdir=./GW170818_bilby_output
 periodic-restart-time=28800
 request-memory=4.0
 request-memory-generation=None
